@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,7 +12,7 @@
  */
 package org.openhab.binding.bluetooth.bluez.internal;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
@@ -51,7 +51,7 @@ public class BlueZDiscoveryService extends AbstractDiscoveryService {
 
     @Activate
     public BlueZDiscoveryService(@Reference DeviceManagerFactory deviceManagerFactory) {
-        super(Collections.singleton(BlueZAdapterConstants.THING_TYPE_BLUEZ), 1, true);
+        super(Set.of(BlueZAdapterConstants.THING_TYPE_BLUEZ), 1, true);
         this.deviceManagerFactory = deviceManagerFactory;
     }
 
