@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,7 +19,6 @@ import static org.openhab.core.thing.ThingStatus.ONLINE;
 
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -220,9 +219,8 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
             try {
                 @Nullable
                 ThingHandler handler = thing.getHandler();
-                if (handler instanceof HeosThingBaseHandler) {
+                if (handler instanceof HeosThingBaseHandler heosHandler) {
                     Set<String> target = handler instanceof HeosPlayerHandler ? players : groups;
-                    HeosThingBaseHandler heosHandler = (HeosThingBaseHandler) handler;
                     String id = heosHandler.getId();
 
                     if (target.contains(id)) {
@@ -303,12 +301,12 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
         } else if (childHandler instanceof HeosPlayerHandler) {
             String channelIdentifier = "P" + childThing.getUID().getId();
             updateThingChannels(channelManager.removeSingleChannel(channelIdentifier));
-        } else if (childHandler instanceof HeosGroupHandler) {
+        } else if (childHandler instanceof HeosGroupHandler groupHandler) {
             String channelIdentifier = "G" + childThing.getUID().getId();
             updateThingChannels(channelManager.removeSingleChannel(channelIdentifier));
             // removes the handler from the groupMemberMap that handler is no longer called
             // if group is getting online
-            removeGroupHandlerInformation((HeosGroupHandler) childHandler);
+            removeGroupHandlerInformation(groupHandler);
         }
     }
 
@@ -361,13 +359,13 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
             String pid = "";
             @Nullable
             ThingHandler handler = childThing.getHandler();
-            if (handler instanceof HeosPlayerHandler) {
+            if (handler instanceof HeosPlayerHandler playerHandler) {
                 channelIdentifier = "P" + childThing.getUID().getId();
-                pid = ((HeosPlayerHandler) handler).getId();
-            } else if (handler instanceof HeosGroupHandler) {
+                pid = playerHandler.getId();
+            } else if (handler instanceof HeosGroupHandler groupHandler) {
                 channelIdentifier = "G" + childThing.getUID().getId();
                 if (groupId == null) {
-                    pid = ((HeosGroupHandler) handler).getId();
+                    pid = groupHandler.getId();
                 } else {
                     pid = groupId;
                 }
@@ -520,7 +518,7 @@ public class HeosBridgeHandler extends BaseBridgeHandler implements HeosEventLis
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(HeosActions.class);
+        return List.of(HeosActions.class);
     }
 
     public void registerMediaEventListener(HeosMediaEventListener heosMediaEventListener) {
