@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,7 @@
 package org.openhab.binding.lcn.internal.subhandler;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.IntStream;
@@ -61,7 +61,7 @@ public class LcnModuleRelaySubHandler extends AbstractLcnModuleSubHandler {
     public void handleCommandPercent(PercentType command, LcnChannelGroup channelGroup, int number)
             throws LcnException {
         // don't use OnOffType.as(), because it returns @Nullable
-        handleCommandOnOff(command.intValue() > 0 ? OnOffType.ON : OnOffType.OFF, channelGroup, number);
+        handleCommandOnOff(OnOffType.from(command.intValue() > 0), channelGroup, number);
     }
 
     @Override
@@ -81,6 +81,6 @@ public class LcnModuleRelaySubHandler extends AbstractLcnModuleSubHandler {
 
     @Override
     public Collection<Pattern> getPckStatusMessagePatterns() {
-        return Collections.singleton(PATTERN);
+        return Set.of(PATTERN);
     }
 }
