@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,6 @@
 package org.openhab.binding.modbus.internal;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -38,7 +37,7 @@ public class CascadedValueTransformationImpl implements ValueTransformation {
                 .filter(s -> !s.isEmpty()).map(transformation -> new SingleValueTransformation(transformation))
                 .collect(Collectors.toList());
         if (localTransformations.isEmpty()) {
-            localTransformations = Collections.singletonList(new SingleValueTransformation(transformationString));
+            localTransformations = List.of(new SingleValueTransformation(transformationString));
         }
         transformations = localTransformations;
     }
