@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,19 +14,18 @@ package org.openhab.binding.nikobus.internal.discovery;
 
 import static org.openhab.binding.nikobus.internal.NikobusBindingConstants.*;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.nikobus.internal.handler.NikobusPcLinkHandler;
 import org.openhab.binding.nikobus.internal.utils.Utils;
-import org.openhab.core.config.discovery.AbstractDiscoveryService;
+import org.openhab.core.config.discovery.AbstractThingHandlerDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
 import org.openhab.core.thing.ThingUID;
-import org.openhab.core.thing.binding.ThingHandler;
-import org.openhab.core.thing.binding.ThingHandlerService;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ServiceScope;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,14 +36,13 @@ import org.slf4j.LoggerFactory;
  *
  * @author Boris Krivonog - Initial contribution
  */
+@Component(scope = ServiceScope.PROTOTYPE, service = NikobusDiscoveryService.class)
 @NonNullByDefault
-public class NikobusDiscoveryService extends AbstractDiscoveryService implements ThingHandlerService {
-
+public class NikobusDiscoveryService extends AbstractThingHandlerDiscoveryService<NikobusPcLinkHandler> {
     private final Logger logger = LoggerFactory.getLogger(NikobusDiscoveryService.class);
-    private @Nullable NikobusPcLinkHandler bridgeHandler;
 
     public NikobusDiscoveryService() throws IllegalArgumentException {
-        super(Collections.singleton(THING_TYPE_PUSH_BUTTON), 0);
+        super(NikobusPcLinkHandler.class, Set.of(THING_TYPE_PUSH_BUTTON), 0);
     }
 
     @Override
@@ -53,18 +51,12 @@ public class NikobusDiscoveryService extends AbstractDiscoveryService implements
 
     @Override
     protected void stopBackgroundDiscovery() {
-        NikobusPcLinkHandler handler = bridgeHandler;
-        if (handler != null) {
-            handler.resetUnhandledCommandProcessor();
-        }
+        thingHandler.resetUnhandledCommandProcessor();
     }
 
     @Override
     protected void startBackgroundDiscovery() {
-        NikobusPcLinkHandler handler = bridgeHandler;
-        if (handler != null) {
-            handler.setUnhandledCommandProcessor(this::process);
-        }
+        thingHandler.setUnhandledCommandProcessor(this::process);
     }
 
     private void process(String command) {
@@ -75,40 +67,15 @@ public class NikobusDiscoveryService extends AbstractDiscoveryService implements
         String address = command.substring(2);
         logger.debug("Received address = '{}'", address);
 
-        NikobusPcLinkHandler handler = bridgeHandler;
-        if (handler != null) {
-            ThingUID thingUID = new ThingUID(THING_TYPE_PUSH_BUTTON, handler.getThing().getUID(), address);
+        ThingUID thingUID = new ThingUID(THING_TYPE_PUSH_BUTTON, thingHandler.getThing().getUID(), address);
 
-            Map<String, Object> properties = new HashMap<>();
-            properties.put(CONFIG_ADDRESS, address);
+        Map<String, Object> properties = new HashMap<>();
+        properties.put(CONFIG_ADDRESS, address);
 
-            String humanReadableNikobusAddress = Utils.convertToHumanReadableNikobusAddress(address).toUpperCase();
-            logger.debug("Detected Nikobus Push Button: '{}'", humanReadableNikobusAddress);
-            thingDiscovered(DiscoveryResultBuilder.create(thingUID).withThingType(THING_TYPE_PUSH_BUTTON)
-                    .withLabel("Nikobus Push Button " + humanReadableNikobusAddress).withProperties(properties)
-                    .withRepresentationProperty(CONFIG_ADDRESS).withBridge(handler.getThing().getUID()).build());
-        }
-    }
-
-    @Override
-    public void setThingHandler(ThingHandler handler) {
-        if (handler instanceof NikobusPcLinkHandler) {
-            bridgeHandler = (NikobusPcLinkHandler) handler;
-        }
-    }
-
-    @Override
-    public @Nullable ThingHandler getThingHandler() {
-        return bridgeHandler;
-    }
-
-    @Override
-    public void activate() {
-        super.activate(null);
-    }
-
-    @Override
-    public void deactivate() {
-        super.deactivate();
+        String humanReadableNikobusAddress = Utils.convertToHumanReadableNikobusAddress(address).toUpperCase();
+        logger.debug("Detected Nikobus Push Button: '{}'", humanReadableNikobusAddress);
+        thingDiscovered(DiscoveryResultBuilder.create(thingUID).withThingType(THING_TYPE_PUSH_BUTTON)
+                .withLabel("Nikobus Push Button " + humanReadableNikobusAddress).withProperties(properties)
+                .withRepresentationProperty(CONFIG_ADDRESS).withBridge(thingHandler.getThing().getUID()).build());
     }
 }
