@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,8 +15,8 @@ package org.openhab.binding.surepetcare.internal.handler;
 import static org.openhab.binding.surepetcare.internal.SurePetcareConstants.*;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -113,7 +113,7 @@ public class SurePetcareBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(SurePetcareDiscoveryService.class);
+        return Set.of(SurePetcareDiscoveryService.class);
     }
 
     @Override
@@ -172,28 +172,28 @@ public class SurePetcareBridgeHandler extends BaseBridgeHandler {
             String tid = th.getUID().getId();
             Map<String, String> properties = null;
             ThingHandler handler = th.getHandler();
-            if (handler instanceof SurePetcarePetHandler) {
-                ((SurePetcarePetHandler) handler).updateThing();
+            if (handler instanceof SurePetcarePetHandler surePetcareHandler) {
+                surePetcareHandler.updateThing();
                 SurePetcarePet pet = petcareAPI.getTopology().getById(petcareAPI.getTopology().pets, tid);
                 if (pet != null) {
                     properties = pet.getThingProperties();
                 }
-            } else if (handler instanceof SurePetcareHouseholdHandler) {
-                ((SurePetcareHouseholdHandler) handler).updateThing();
+            } else if (handler instanceof SurePetcareHouseholdHandler surePetcareHouseholdHandler) {
+                surePetcareHouseholdHandler.updateThing();
                 SurePetcareHousehold household = petcareAPI.getTopology().getById(petcareAPI.getTopology().households,
                         tid);
                 if (household != null) {
                     properties = household.getThingProperties();
                 }
-            } else if (handler instanceof SurePetcareDeviceHandler) {
-                ((SurePetcareDeviceHandler) handler).updateThing();
+            } else if (handler instanceof SurePetcareDeviceHandler surePetcareDevicedHandler) {
+                surePetcareDevicedHandler.updateThing();
                 SurePetcareDevice device = petcareAPI.getTopology().getById(petcareAPI.getTopology().devices, tid);
                 if (device != null) {
                     properties = device.getThingProperties();
                 }
             }
-            if ((properties != null) && (handler instanceof SurePetcareBaseObjectHandler)) {
-                ((SurePetcareBaseObjectHandler) handler).updateProperties(properties);
+            if ((properties != null) && (handler instanceof SurePetcareBaseObjectHandler surePetcareBaseHandler)) {
+                surePetcareBaseHandler.updateProperties(properties);
             }
         }
     }
@@ -203,8 +203,8 @@ public class SurePetcareBridgeHandler extends BaseBridgeHandler {
         for (Thing th : getThing().getThings()) {
             if (th.getThingTypeUID().equals(THING_TYPE_PET)) {
                 ThingHandler handler = th.getHandler();
-                if (handler != null) {
-                    ((SurePetcarePetHandler) handler).updateThing();
+                if (handler instanceof SurePetcarePetHandler surePetcarePetHandler) {
+                    surePetcarePetHandler.updateThing();
                 }
             }
         }
